Flexibilização na conexão com banco de dados e no registro dos atributos do PIP

--- a/src/test/resources/wso2-pip-suap.properties
+++ b/src/test/resources/wso2-pip-suap.properties
@@ -8,27 +8,53 @@
 # 
 # usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
 
-# ------------------------------- LDAP -----------------------------------
+dominio.base=http://ifrn.edu.br
+
 # Conectores para atributos do LDAP
 usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
+centralservicos/donoticket=br.edu.ifrn.pip.connectors.PGConnector
 
-# Configuração do LDAP
+
+pip.attribute.usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
+pip.attribute.centralservicos/donoticket=br.edu.ifrn.pip.connectors.PGConnector
+
+## ------------------------------------------------------------------------
+## Configurações de conexão com o protocolo LDAP (Lightweight Directory Access Protocol).
+##
+## ------------------------------------------------------------------------
+
 ldap.usuario = demo 
 ldap.senha = demo
 ldap.servidor = ldap://127.0.0.1:389
-# ----------------------------- FIM LDAP --------------------------------- 
 
 
-# ---------------------------- PostgreSQL --------------------------------
-# Conectores para atributos do PostgreSQL
-centralservicos/donoticket=br.edu.ifrn.pip.connectors.PGConnector
+## ------------------------------------------------------------------------
+## Configurações da Acesso ao Banco de Dados.
+##
+## O PIP permite a conexão com bancos de dados PostgreSQL ou MySQL. Por padrão, é utilizado o PostgreSQL.
+## ------------------------------------------------------------------------
 
-# Configuração do PostgreSQL
-pg.driver=org.postgresql.Driver
-pg.url = jdbc:postgresql://127.0.0.1:5432/suapdev
-pg.usuario = postgres
-pg.senha = 
-# -------------------------- FIM PostgreSQL ------------------------------
+## Define o fornecedor do banco, pode ser PostgreSQL ou MySQL (case insensitive). Esta configuração é obrigatória. O padrão é PostgreSQL. 
+db.vendor=PostgreSQL
+
+## Define a classe do driver de acesso ao banco.
+db.driver=org.postgresql.Driver
+
+## Define o endereço do host onde está o bando de dados. Esta configuração é opcional. O padrão é localhost.
+#db.host=127.0.0.1
+
+## Define a porta em que o banco de dados está "ouvindo". Esta configuração é opcional. O padrão é 5432
+#db.port=5432
+
+## Define o nome da base de dados
+db.database=suapdev
+
+## Define o usuário de acesso ao banco de dados
+db.usuario=postgres
+
+## Define a senha de acesso ao banco de dados
+db.senha=
+
 
 # --- Só para testes unitários ---- 
 configSemValor=
