Criação de arquivo de configuração padrão.

--- a/src/test/resources/wso2-pip-suap.properties
+++ b/src/test/resources/wso2-pip-suap.properties
@@ -1,26 +1,25 @@
-# ------------------------------------------------------------------------
-# Definição dos conectores
-# ------------------------------------------------------------------------
-#
-# Exemplo:
-# -> Informe apenas o URI, exemplo:
-#    Para o attributeid -> http://www.ifrn.edu.br/usuario/departmento - informe:
-# 
-# usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
+## ------------------------------------------------------------------------
+## Configurações gerais
+## ------------------------------------------------------------------------
 
 dominio.base=http://ifrn.edu.br
 
-# Conectores para atributos do LDAP
-usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
-centralservicos/donoticket=br.edu.ifrn.pip.connectors.PGConnector
-
+## ------------------------------------------------------------------------
+## Definição dos conectores
+## ------------------------------------------------------------------------
+## Todo conector deve ser precedido do prefixo 'pip.attribute'
+## Exemplo:
+## -> Informe apenas o URI, exemplo:
+##    Para o attributeid -> http://www.ifrn.edu.br/usuario/departmento - informe:
+## 
+## pip.attribute.usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
 
 pip.attribute.usuario/departamento=br.edu.ifrn.pip.connectors.LDAPConnector
 pip.attribute.centralservicos/donoticket=br.edu.ifrn.pip.connectors.PGConnector
 
+
 ## ------------------------------------------------------------------------
 ## Configurações de conexão com o protocolo LDAP (Lightweight Directory Access Protocol).
-##
 ## ------------------------------------------------------------------------
 
 ldap.usuario = demo 
